--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -88,7 +88,7 @@
 .profile-photo {
   height: 200px;
   object-fit: cover;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);  /* Subtle shadow */
+  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);  Subtle shadow */
   transition: transform 0.1s ease;
 }
 
@@ -98,6 +98,7 @@
   font-size: 0.8 rem;
   font-family: 'helvetica-neue-5', sans-serif;
   text-align: center;
+  color: #4e4e4e;
 }
 
 .about-text a {
