--- a/portfolio/src/components/EpPage.css
+++ b/portfolio/src/components/EpPage.css
@@ -21,7 +21,7 @@
   .ep-content {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 40px;
+    /* padding: 40px; */
   }
   
   .ep-hero-image {
