--- a/portfolio/src/components/Projects.css
+++ b/portfolio/src/components/Projects.css
@@ -5,7 +5,8 @@
   justify-content: space-around;
   padding: 0;
   width: 100%;
-  background: #f5f5f5;  /* light background to see the container */
+  background: #f5f5f5; 
+  margin-top: 1px; /* light background to see the container */
 }
 
 .title-banner {
@@ -38,7 +39,7 @@
   height: 200px;
   position: relative;
   overflow: hidden;
-  background: white;
+  background: black;
   /* margin-bottom: -30px; */
   /* margin: -10px -10px; */
   /* box-shadow: 0 2px 10px rgba(0,0,0,0.1); */
