--- a/portfolio/src/components/EpPage.css
+++ b/portfolio/src/components/EpPage.css
@@ -5,9 +5,12 @@
     background: #ffffff;
     font-family: 'helvetica-neue-5';
   }
-  
-  .back-button:hover {
-    opacity: 0.7;
+
+  .ep-nav-icons {
+    position: relative;
+    display: flex;
+    gap: 1rem;
+    width: 20%;
   }
   
   .ep-content {
@@ -23,6 +26,8 @@
   }
   
   .ep-subtitle {
+    margin-top: -20px;
+    padding-left: 20px;
     font-size: 24px;
     line-height: 1.6;
     color: #5ae638;
